# bmstu_tnds

./: .gitignore  CMakeLists.txt  makefile
inc/: io.h  number.h
lab_01/: .gitignore  CMakeLists.txt  Doxyfile  makefile
lab_01/docs/: Report_Lab_01.docx
lab_01/inc/: check.h  checking.h  inpt_oupt.h  io.h  multiply.h  number.h  parse.h
lab_01/src/: check.c  checking.c  inpt_oupt.c  io.c  main.c  multiply.c  parse.c
lab_02/: CMakeLists.txt  makefile
lab_02/data/: data10000_asc.txt  data10000_des.txt  data10000_ran.txt  data13.txt  data20000_asc.txt  data20000_des.txt  data20000_ran.txt  data30000_asc.txt  data30000_des.txt  data30000_ran.txt
lab_02/docs/: Report_Lab_02.docx
lab_02/inc/: find.h  flat.h  sort.h
lab_03/: CMakeLists.txt  makefile  py_matrix.py
lab_03/data/: matrix1.txt  matrix2.txt  mtrx.txt
lab_03/docs/: Report_lab_03.odt
lab_03/inc/: converters.h  defines.h  func.h  io.h  m_types.h  matrix.h  matrix_process.h  mtypes.h  sparse.h  summatrix.h  sumsparse.h
lab_03/src/: converters.c  func.c  io.c  main.c  matrix.c  matrix_process.c  sparse.c  summatrix.c  sumsparse.c
lab_03_1/: makefile
lab_04/: CMakeLists.txt  makefile
lab_05/: CMakeLists.txt  makefile
lab_06/: CMakeLists.txt
lab_06/data/: tree01.txt  tree02.txt  tree03.txt  tree04.txt  tree05.txt
lab_06/docs/: Report_lab_06.odt
lab_06/inc/: hash_utils.h  list_utils.h  macro.h  search_utils.h  tick.h  tree_utils.h
lab_06/src/: hash_utils.c  list_utils.c  main.c  search_utils.c  tick.c  tree_utils.c
lab_07/: CMakeLists.txt  makefile
src/: io.c  main.c
(+40 files in other folders)
